--- a/styles.html
+++ b/styles.html
@@ -27,6 +27,7 @@
   *{ box-sizing:border-box; }
   body{
     margin:0;
+    font-size:18px;
     font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     background: radial-gradient(1200px 600px at 50% -20%, rgba(59,130,246,.12), transparent 60%),
                 radial-gradient(1200px 600px at 90% 10%, rgba(139,92,246,.10), transparent 55%),
@@ -54,7 +55,7 @@
     font-weight:900;
   }
   .app-title{font-weight:900; letter-spacing:.2px;}
-  .app-sub{font-size:12px; color:var(--muted); margin-top:2px;}
+  .app-sub{font-size:14px; color:var(--muted); margin-top:2px;}
 
   .icon-btn{
     border:1px solid rgba(255,255,255,.08);
@@ -85,7 +86,7 @@
   .card-pad{ padding:14px; }
 
   .section-title{
-    font-size:14px;
+    font-size:16px;
     color:var(--muted);
     font-weight:800;
     margin:6px 2px 10px 2px;
@@ -105,10 +106,10 @@
     display:flex; align-items:flex-start; justify-content:space-between; gap:12px;
   }
   .hero-title{
-    font-size:20px; font-weight:950;
+    font-size:24px; font-weight:950;
     letter-spacing:.2px;
   }
-  .hero-sub{ color:var(--muted); margin-top:4px; font-size:13px; }
+  .hero-sub{ color:var(--muted); margin-top:4px; font-size:15px; }
   .hero-kpis{
     display:flex; flex-wrap:wrap; gap:10px;
     margin-top:14px;
@@ -120,8 +121,8 @@
     border-radius:18px;
     padding:12px;
   }
-  .kpi .k{ color:var(--muted); font-size:12px; font-weight:800; }
-  .kpi .v{ font-size:20px; font-weight:950; margin-top:3px; }
+  .kpi .k{ color:var(--muted); font-size:14px; font-weight:800; }
+  .kpi .v{ font-size:24px; font-weight:950; margin-top:3px; }
 
   /* Progress bar */
   .bar{
@@ -157,8 +158,8 @@
   }
   .session-main{ flex:1; min-width:0; }
   .session-title{ font-weight:950; line-height:1.1; }
-  .session-sub{ color:var(--muted); font-size:13px; margin-top:4px; }
-  .session-note{ color:var(--muted); font-size:12px; margin-top:6px; opacity:.95; }
+  .session-sub{ color:var(--muted); font-size:15px; margin-top:4px; }
+  .session-note{ color:var(--muted); font-size:14px; margin-top:6px; opacity:.95; }
 
   .session-actions{
     display:flex;
@@ -177,6 +178,7 @@
     font-weight:850;
     cursor:pointer;
     min-width:92px;
+     font-size:15px;
   }
   .btn.primary{
     background: linear-gradient(135deg, rgba(59,130,246,.95), rgba(37,99,235,.95));
@@ -197,8 +199,8 @@
   .week-top{
     display:flex; align-items:flex-start; justify-content:space-between; gap:12px;
   }
-  .week-title{ font-size:18px; font-weight:950; }
-  .week-meta{ color:var(--muted); font-size:13px; margin-top:4px; }
+  .week-title{ font-size:21px; font-weight:950; }
+  .week-meta{ color:var(--muted); font-size:15px; margin-top:4px; }
   .week-toggle{
     border:1px solid rgba(255,255,255,.08);
     background: rgba(255,255,255,.04);
@@ -226,15 +228,14 @@
     justify-content:flex-start;
     cursor:pointer;
     user-select:none;
+    font-size:18px;
   }
-  .tile small{ display:block; opacity:.85; font-weight:800; margin-bottom:4px; }
+ .tile small{ display:block; opacity:.85; font-weight:800; margin-bottom:4px; font-size:14px; }
 
-  .tile.easy{ background: linear-gradient(135deg, rgba(34,197,94,.95), rgba(22,163,74,.9)); }
-  .tile.tempo{ background: linear-gradient(135deg, rgba(245,158,11,.95), rgba(217,119,6,.9)); }
-  .tile.intervals{ background: linear-gradient(135deg, rgba(251,146,60,.95), rgba(239,68,68,.9)); }
-  .tile.hills{ background: linear-gradient(135deg, rgba(16,185,129,.95), rgba(20,184,166,.9)); }
-  .tile.long{ background: linear-gradient(135deg, rgba(167,139,250,.95), rgba(139,92,246,.9)); }
-  .tile.race{ background: linear-gradient(135deg, rgba(239,68,68,.95), rgba(185,28,28,.9)); }
+   .tile.run{ background: linear-gradient(135deg, rgba(34,197,94,.95), rgba(22,163,74,.9)); }
+  .tile.swim{ background: linear-gradient(135deg, rgba(6,182,212,.95), rgba(14,116,144,.9)); }
+  .tile.bike{ background: linear-gradient(135deg, rgba(59,130,246,.95), rgba(37,99,235,.9)); }
+  .tile.workout{ background: linear-gradient(135deg, rgba(167,139,250,.95), rgba(124,58,237,.9)); }
 
   /* Bottom nav */
   .bottom-nav{
@@ -266,8 +267,8 @@
     background: rgba(255,255,255,.06);
     border:1px solid rgba(255,255,255,.06);
   }
-  .nav-ico{ font-size:18px; }
-  .nav-txt{ font-size:12px; font-weight:850; }
+  .nav-ico{ font-size:20px; }
+  .nav-txt{ font-size:14px; font-weight:850; }
 
   /* Modal */
   .modal-overlay{
@@ -295,7 +296,7 @@
     border-bottom:1px solid rgba(255,255,255,.08);
   }
   .modal-title{ font-weight:950; }
-  .modal-meta{ font-size:12px; color:var(--muted); margin-top:2px; }
+   .modal-meta{ font-size:14px; color:var(--muted); margin-top:2px; }
   .modal-body{ padding:12px 14px; }
   .modal-footer{
     display:flex; gap:10px;
@@ -304,7 +305,7 @@
     justify-content:flex-end;
   }
   .field{ display:flex; flex-direction:column; gap:6px; margin:10px 0; }
-  .field span{ font-size:12px; color:var(--muted); font-weight:900; }
+  .field span{ font-size:14px; color:var(--muted); font-weight:900; }
   .row{ display:flex; gap:12px; }
   .row .field{ flex:1; }
 
@@ -322,6 +323,21 @@
     border-color: rgba(59,130,246,.55);
     box-shadow: 0 0 0 4px rgba(59,130,246,.12);
   }
+
+.preview-table{
+    width:100%;
+    border-collapse:collapse;
+    font-size:13px;
+  }
+  .preview-table th, .preview-table td{
+    border:1px solid rgba(255,255,255,.08);
+    padding:6px 8px;
+    text-align:left;
+    vertical-align:top;
+  }
+  .preview-table th{ background: rgba(255,255,255,.06); }
+  .chip-warn{ color:#f59e0b; font-weight:800; }
+  .chip-err{ color:#ef4444; font-weight:800; }
 
   /* Toast */
   .toast{
