--- a/styles.html
+++ b/styles.html
@@ -57,6 +57,20 @@
   .app-title{font-weight:900; letter-spacing:.2px;}
   .app-sub{font-size:28px; color:var(--muted); margin-top:2px;}
 
+
+  .strava-status{
+    font-size:22px;
+    color:var(--muted);
+    border:1px solid rgba(255,255,255,.08);
+    border-radius:14px;
+    padding:8px 10px;
+    background: rgba(255,255,255,.03);
+    max-width:440px;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+  }
+
   .icon-btn{
     border:1px solid rgba(255,255,255,.08);
     background: rgba(255,255,255,.04);
