--- a/styles.html
+++ b/styles.html
@@ -244,7 +244,8 @@
     user-select:none;
     font-size:32px;
   }
- .tile small{ display:block; opacity:.85; font-weight:800; margin-bottom:4px; font-size:28px; }
+.tile small{ display:block; opacity:.85; font-weight:800; margin-bottom:8px; font-size:24px; line-height:1; }
+  .tile span{ display:block; line-height:1.1; }
 
    .tile.run{ background: linear-gradient(135deg, rgba(34,197,94,.95), rgba(22,163,74,.9)); }
   .tile.swim{ background: linear-gradient(135deg, rgba(6,182,212,.95), rgba(14,116,144,.9)); }
@@ -289,7 +290,7 @@
     position:fixed; inset:0;
     background:rgba(0,0,0,.55);
     display:flex;
-    align-items:flex-end;
+     align-items:center;
     justify-content:center;
     padding:14px;
     z-index:50;
